Fixed spacing on event table

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -114,29 +114,6 @@ input[type="button"]:hover.blueButton {
   height: 100%;
 }
 
-@media (min-width: 568px) {
-  .centralDashboardContainer {
-    margin-top:3rem;
-    max-width: 80vw;
-  }
-  .formSection {
-    padding: 0px 25px
-  }
-}
-
-@media (min-width: 1600px) {
-  .centralDashboardContainer {
-    max-width: 1280px;
-  }
-}
-
-@media (max-width: 568px) {
-  .colouredKeys {
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-}
-
 .circle {
   width: 18px;
   height: 18px;
@@ -167,12 +144,6 @@ input[type="button"]:hover.blueButton {
 .eventTableColouredText  {
   text-align: end;
 }
-
-.eventTableColouredText span {
-  display: inline;
-  padding: 0px;
-}
-
 
 h2 {
   font-weight: bold;
@@ -216,3 +187,47 @@ h2 {
   margin-left: 5px;
   cursor: pointer;
 }
+
+
+@media (min-width: 568px) {
+  .centralDashboardContainer {
+    margin-top:3rem;
+    max-width: 80vw;
+  }
+  .formSection {
+    padding: 0px 25px
+  }
+}
+
+.colourBarPadding{
+  padding-left: 20px;
+  margin-top: 7px;
+}
+
+@media (min-width: 1600px) {
+  .centralDashboardContainer {
+    max-width: 1280px;
+  }
+}
+
+@media (max-width: 568px) {
+  .colouredKeys {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .eventTable b, .eventTable span{
+    padding: 10px 15px;
+    display: inherit;
+  }
+  .colourBarPadding{
+    paddingLeft: 15px;
+    marginTop: 7px;
+  }
+}
+
+.eventTableColouredText span {
+  display: inline;
+  padding: 0px;
+}
+
